# villagepub

./: .gitignore  CMakeLists.txt  readme.md
.claude/: CLAUDE.md  settings.local.json
.github/workflows/: linuxBuild.yml  release.yml  windowsBuild.yml
android_project/: local.properties  settings.gradle
android_project/app/src/main/: AndroidManifest.xml  build.gradle
android_project/app/src/main/java/com/example/mygame/: MainActivity.java
cmake/: BuildRaylib.cmake
commonSource/: CMakeLists.txt  version.h
commonSource/GRand/: CMakeLists.txt
commonSource/Logging/: CMakeLists.txt  logger.cpp  logger.h  loggerInterface.h  loggerMacros.h  raylibLogging.cpp  raylibLogging.h
commonSource/villageRNG/: CMakeLists.txt  villageRNG_Implimentation.cpp  villageRNG_Implimentation.h  villageRNG_Interface.cpp  villageRNG_Interface.h
main/: CMakeLists.txt  main.cpp
src/: main.cpp
tests/: CMakeLists.txt  villageRNGTests.cpp
